--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header class="hero">
+        <div class="hero-overlay"></div>
         <div class="container">
             <div class="hero-content">
                 <h1>Всем привет!</h1>
@@ -15,9 +16,9 @@
                 <p>Я - филолог, учитель русского языка и литературы, Монтессори-педагог, педагог по коррекционному чтению.</p>
                 <p>Больше всего я люблю читать и учить детей.</p>
             </div>
-            <!-- <img src="img/MyCollages.jpg" alt="Ксения Шамшурина" class="hero-image"> -->
         </div>
     </header>
+    
 
     <section class="about">
         <div class="container">
@@ -82,18 +83,19 @@
             <p>Вы можете присоединиться к группе по сочинению в Telegram или ВКонтакте.</p>
             <p>Также вы можете записаться на личную консультацию по методике обучения чтению.</p>
             <div class="social">
-                <a href="https://wa.me/yourphone" class="button">WhatsApp</a>
-                <a href="https://t.me/yourusername" class="button">Telegram</a>
-                <a href="https://instagram.com/yourusername" class="button">Instagram</a>
-                <a href="https://vk.com/yourusername" class="button">VK</a>
+                <a href="https://www.youtube.com/playlist?list=PLy2GixyjyKmzhtKkJ4Xjhq0cBgdLfz6Fv" class="button">YouTube</a>
+                <a href="https://telegram.me/barrashki" class="button">Telegram</a>
+                <!-- <a href="https://instagram.com/yourusername" class="button">Instagram</a> -->
+                <a href="https://vk.com/club219034837" class="button">VK</a>
             </div>
-            <a href="https://example.com/form" class="button button-primary">Анкета на курс</a>
+            <a href="https://docs.google.com/forms/d/1unKUsvizjGi315aESgQU6ba1FiL_WQGSboEcU6TysIE/viewform?tpclid=facebook.PAZXh0bgNhZW0CMTEAAaYVJIwLMfvlaKWBm4GRUU4FUqJDvdK984un39g94fktN-Cugk2bwlGAO8k_aem_YQ6UdEuBTvFC3_ToNlFrSw&edit_requested=true class="button button-primary">Анкета на курс</a>
         </div>
     </section>
+    
 
     <footer>
         <div class="container">
-            <p>© 2024 Ксения Шамшурина. Все права защищены.</p>
+            <p class="footer-text">© 2024 Ксения Шамшурина. Все права защищены.</p>
         </div>
     </footer>
 </body>
