--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <!-- <a href="https://instagram.com/yourusername" class="button">Instagram</a> -->
                 <a href="https://vk.com/club219034837" class="button">VK</a>
             </div>
-            <a href="https://docs.google.com/forms/d/1unKUsvizjGi315aESgQU6ba1FiL_WQGSboEcU6TysIE/viewform?tpclid=facebook.PAZXh0bgNhZW0CMTEAAaYVJIwLMfvlaKWBm4GRUU4FUqJDvdK984un39g94fktN-Cugk2bwlGAO8k_aem_YQ6UdEuBTvFC3_ToNlFrSw&edit_requested=true class="button button-primary">Анкета на курс</a>
+            <a href="https://docs.google.com/forms/d/1unKUsvizjGi315aESgQU6ba1FiL_WQGSboEcU6TysIE/viewform?tpclid=facebook.PAZXh0bgNhZW0CMTEAAaYVJIwLMfvlaKWBm4GRUU4FUqJDvdK984un39g94fktN-Cugk2bwlGAO8k_aem_YQ6UdEuBTvFC3_ToNlFrSw&edit_requested=true" class="button button-primary">Анкета на курс</a>
         </div>
     </section>
     
