--- a/index.html
+++ b/index.html
@@ -100,12 +100,58 @@
             </div>
             <div class="course-block">
                 <img src="img/results.jfif" alt="Результаты курса" class="section-image">
-                <p>Я уже провела 2 модуля в 4-х группах и получила шикарные результаты! Поэтому с уверенностью могу сказать: курс работает 100%!</p>
+                <a href="https://docs.google.com/forms/d/1unKUsvizjGi315aESgQU6ba1FiL_WQGSboEcU6TysIE/viewform?tpclid=facebook.PAZXh0bgNhZW0CMTEAAaYVJIwLMfvlaKWBm4GRUU4FUqJDvdK984un39g94fktN-Cugk2bwlGAO8k_aem_YQ6UdEuBTvFC3_ToNlFrSw&edit_requested=true" class="button button-primary">Занять место на курсе «Сочиняю легко»</a>
+                <!-- <p>Я уже провела 2 модуля в 4-х группах и получила шикарные результаты! Поэтому с уверенностью могу сказать: курс работает 100%!</p> -->
             </div>
+            <section class="testimonials">
+                <div class="container testimonials-container">
+                    <h2>Отзывы</h2>
+                    <div class="btn-carousel">
+                        <button class="prev">&lt;</button>
+                        <button class="next">&gt;</button>
+                    </div>
+                    <div class="carousel">
+                        <div class=" carousel-container">
+                            <div class="carousel-item">
+                                <p><strong><em>Надежда Семикоз, мама ученицы 4 класса:</em></strong></p>
+                                <p>Ксения, хочу выразить Вам свою благодарность за замечательный курс и кропотливую работу с нашими детьми!</p>
+                                <p>То, с каким трепетом и <u>тщательностью</u> вы подходите к каждому занятию, очень ценно. И дети <u>с удовольствием идут на занятия, легко выполняют дз</u> (правда, приходится напоминать), в хорошем настроении с урока уходят.</p>
+                                <p>Я вижу <u>результаты</u> в нескольких аспектах:</p>
+                                <ul>
+                                    <li><u>К школьным сочинениям я не прикасаюсь совсем и ни разу не слышала, что ей было сложно</u> (кроме того, что надо писать, что картина нравится, а она ей не нравится).</li>
+                                    <li><u>Значительно расширился словарный запас. Дочка в обиходе использует новые обороты речи</u>, описывает чувства, оттенки.</li>
+                                    <li><u>Художественное просвещение</u>. Обсуждая картины, Вы затрагиваете столько тем, что я диву даюсь!</li>
+                                </ul>
+                                <p><u>Курс очень ценный! Он больше, чем курс по написанию сочинений.</u></p>
+                                <p>А Ваша работа восхищает! Мы с Тоней с нетерпением ждем следующий курс 🤍</p>
+                            </div>
+                            <div class="carousel-item">
+                                <p><strong><em>Зарина, мама ученицы 4 класса:</em></strong></p>
+                                <p>Полностью согласна с Надеждой🙏🙏🙏 Один раз в неделю — это так мало, но в то же время <u>Вы дали бесценный багаж знаний</u>...</p>
+                            </div>
+                            <div class="carousel-item">
+                                <p><strong><em>Анна Шубина, мама ученицы 5 класса:</em></strong></p>
+                                <p>Добрый день, Ксения! Хочу сказать огромные слова благодарности за курс!</p>
+                            </div>
+                            <div class="carousel-item">
+                                <p><strong><em>Юлия Кислова, мама ученицы 5 класса:</em></strong></p>
+                                <p><u>Полностью поддерживаю! Ксения, вы супер препод!</u></p>
+                            </div>
+                            <div class="carousel-item">
+                                <p><strong><em>Алина Петровских, мама ученицы 6 класса:</em></strong></p>
+                                <p>Ксения, спасибо вам! Почему в школе так не учат? <u>Дочь бежит с радостью на ваши занятия</u>...</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
             <div class="contact">
                 <h2>Контакты</h2>
                 <p>Вы можете присоединиться к группе по сочинению в Telegram или ВКонтакте.</p>
-                <p>Вы можете записаться на любой вид урока, на курс по пересказу, а также на консультацию по методике обучения чтению.</p>
+                <p>Вы можете записаться на: <br>
+                    - любой вид урока,<br>
+                    - на курс по пересказу,<br>
+                    - на консультацию по методике обучения чтению.</p>
                 <div class="social">
                     <a href="https://www.youtube.com/playlist?list=PLy2GixyjyKmzhtKkJ4Xjhq0cBgdLfz6Fv" class="button">YouTube</a>
                     <a href="https://t.me/barrashki" class="button">Telegram</a>
@@ -116,48 +162,7 @@
             </div>
         </div>
     </section>
-    <section class="testimonials">
-        <div class="container testimonials-container">
-            <h2>Отзывы</h2>
-            <div class="btn-carousel">
-                <button class="prev">&lt;</button>
-                <button class="next">&gt;</button>
-            </div>
-            <div class="carousel">
-                <div class=" carousel-container">
-                    <div class="carousel-item">
-                        <p><strong><em>Надежда Семикоз, мама ученицы 4 класса:</em></strong></p>
-                        <p>Ксения, хочу выразить Вам свою благодарность за замечательный курс и кропотливую работу с нашими детьми!</p>
-                        <p>То, с каким трепетом и <u>тщательностью</u> вы подходите к каждому занятию, очень ценно. И дети <u>с удовольствием идут на занятия, легко выполняют дз</u> (правда, приходится напоминать), в хорошем настроении с урока уходят.</p>
-                        <p>Я вижу <u>результаты</u> в нескольких аспектах:</p>
-                        <ul>
-                            <li><u>К школьным сочинениям я не прикасаюсь совсем и ни разу не слышала, что ей было сложно</u> (кроме того, что надо писать, что картина нравится, а она ей не нравится).</li>
-                            <li><u>Значительно расширился словарный запас. Дочка в обиходе использует новые обороты речи</u>, описывает чувства, оттенки.</li>
-                            <li><u>Художественное просвещение</u>. Обсуждая картины, Вы затрагиваете столько тем, что я диву даюсь!</li>
-                        </ul>
-                        <p><u>Курс очень ценный! Он больше, чем курс по написанию сочинений.</u></p>
-                        <p>А Ваша работа восхищает! Мы с Тоней с нетерпением ждем следующий курс 🤍</p>
-                    </div>
-                    <div class="carousel-item">
-                        <p><strong><em>Зарина, мама ученицы 4 класса:</em></strong></p>
-                        <p>Полностью согласна с Надеждой🙏🙏🙏 Один раз в неделю — это так мало, но в то же время <u>Вы дали бесценный багаж знаний</u>...</p>
-                    </div>
-                    <div class="carousel-item">
-                        <p><strong><em>Анна Шубина, мама ученицы 5 класса:</em></strong></p>
-                        <p>Добрый день, Ксения! Хочу сказать огромные слова благодарности за курс!</p>
-                    </div>
-                    <div class="carousel-item">
-                        <p><strong><em>Юлия Кислова, мама ученицы 5 класса:</em></strong></p>
-                        <p><u>Полностью поддерживаю! Ксения, вы супер препод!</u></p>
-                    </div>
-                    <div class="carousel-item">
-                        <p><strong><em>Алина Петровских, мама ученицы 6 класса:</em></strong></p>
-                        <p>Ксения, спасибо вам! Почему в школе так не учат? <u>Дочь бежит с радостью на ваши занятия</u>...</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+    
     
     <section>
         <div class="buttons">
