--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <div class="hero-content">
                 <h1>Всем привет!</h1>
                 <p>Меня зовут <b class="alert-text">Ксения Шамшурина.</b></p>
-                <p>Я - филолог, учитель русского языка и литературы, Монтессори-педагог, педагог по коррекционному чтению.</p>
-                <p>Больше всего я люблю читать и учить детей.</p>
+                <!-- <p>Я - филолог, учитель русского языка и литературы, Монтессори-педагог, педагог по коррекционному чтению.</p>
+                <p>Больше всего я люблю читать и учить детей.</p> -->
             </div>
         </div>
     </header>
@@ -159,13 +159,16 @@
                     - любой вид урока,<br>
                     - на курс по пересказу,<br>
                     - на консультацию по методике обучения чтению.</p>
+                    <a href="https://docs.google.com/forms/d/1unKUsvizjGi315aESgQU6ba1FiL_WQGSboEcU6TysIE/viewform?tpclid=facebook.PAZXh0bgNhZW0CMTEAAaYVJIwLMfvlaKWBm4GRUU4FUqJDvdK984un39g94fktN-Cugk2bwlGAO8k_aem_YQ6UdEuBTvFC3_ToNlFrSw&edit_requested=true" class="button button-primary">Анкета на курс по сочинению</a>
                 <div class="social">
-                    <a href="https://www.youtube.com/playlist?list=PLy2GixyjyKmzhtKkJ4Xjhq0cBgdLfz6Fv" class="button">YouTube</a>
-                    <a href="https://t.me/barrashki" class="button">Telegram</a>
                     <a href="https://www.instagram.com/barrashki?igsh=dWZtZWEyZWNzemhr&utm_source=qr" class="button">Instagram</a>
+                    <a href="https://t.me/barrashki_so4ini" class="button">Telegram</a>
                     <a href="https://vk.com/club219034837" class="button">VK</a>
+                    <a href="https://www.youtube.com/playlist?list=PLy2GixyjyKmzhtKkJ4Xjhq0cBgdLfz6Fv" class="button">YouTube</a>
+         
+ 
                 </div>
-                <a href="https://docs.google.com/forms/d/1unKUsvizjGi315aESgQU6ba1FiL_WQGSboEcU6TysIE/viewform?tpclid=facebook.PAZXh0bgNhZW0CMTEAAaYVJIwLMfvlaKWBm4GRUU4FUqJDvdK984un39g94fktN-Cugk2bwlGAO8k_aem_YQ6UdEuBTvFC3_ToNlFrSw&edit_requested=true" class="button button-primary">Анкета на курс</a>
+               
             </div>
         </div>
     </section>
