--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
         </div>
     </header>
-    <div class="container">
+    <div class="container text">
         <p>Я - филолог, учитель русского языка и литературы, Монтессори-педагог, педагог по коррекционному чтению.</p>
         <p>Больше всего я люблю читать и учить детей.</p>
     </div>
@@ -61,28 +61,31 @@
         <div class="container">
             <h2 style="font-size: 26px;"><strong><em>Курс «Сочиняю легко»</em></strong></h2>
             <div class="course-block">
+                <div class="course-content">
                 <img src="img/target.jfif" alt="Введение в курс" class="section-image">
-                <p>Приглашаю ваших детей на свой курс <strong><em>«Сочиняю легко»</em></strong>! Он состоит из 4-х крупных модулей:</p>
-                <ul>
-                    <li>🌱 повествование</li>
-                    <li>🌱 описание</li>
-                    <li>🌱 тропы</li>
-                    <li>🌱 рассуждение</li>
-                </ul>
+                    <div class="colum">                    <p>Приглашаю ваших детей на свой курс <strong><em>«Сочиняю легко»</em></strong>! Он состоит из 4-х крупных модулей:</p>
+                        <ul>
+                            <li>🌱 повествование</li>
+                            <li>🌱 описание</li>
+                            <li>🌱 тропы</li>
+                            <li>🌱 рассуждение</li>
+                        </ul></div>
+                </div>
             </div>
             <div class="course-block">
-                <img src="img/contentjfif.jfif" alt="Целевая аудитория" class="section-image">
+                <img src="img/contentjfif.jfif" alt="Целевая аудитория" class="section-image none">
                 <p ><b class="alert-text" >Для кого этот курс:</b> 3-4 класс, 5-7 и 8-9 классы. В группе будет до 6 человек! С применением методики перевернутого класса.</p>
             </div>
             <div class="course-block">
                 <!-- <img src="img/course-process.jpeg" alt="Процесс курса" class="section-image"> -->
                 <p><b class="alert-text">Как проходит курс:</b> 1 видеоурок с небольшим заданием - 1 раз в неделю, ребенок выбирает удобное время сам, и 1 раз в выходной день практика на 1 час 20 минут. Кроме того будет общение в чате, геймификация, проверка всех сочинений и обратная связь. На некоторых модулях будут приглашенные эксперты.</p>
                 <p>Стоимость абонемента в месяц - 6000 рублей.</p>
-                <a href="https://docs.google.com/forms/d/1unKUsvizjGi315aESgQU6ba1FiL_WQGSboEcU6TysIE/viewform?tpclid=facebook.PAZXh0bgNhZW0CMTEAAaYVJIwLMfvlaKWBm4GRUU4FUqJDvdK984un39g94fktN-Cugk2bwlGAO8k_aem_YQ6UdEuBTvFC3_ToNlFrSw&edit_requested=true" class="button button-primary">Занять место на курсе «Сочиняю легко»</a>
+               
             </div>
-            <div class="course-block">
+            <a href="https://docs.google.com/forms/d/1unKUsvizjGi315aESgQU6ba1FiL_WQGSboEcU6TysIE/viewform?tpclid=facebook.PAZXh0bgNhZW0CMTEAAaYVJIwLMfvlaKWBm4GRUU4FUqJDvdK984un39g94fktN-Cugk2bwlGAO8k_aem_YQ6UdEuBTvFC3_ToNlFrSw&edit_requested=true" class="button button-primary">Занять место на курсе «Сочиняю легко»</a>
+            <div class="course-block course-content">
                 <img src="img/problems.jfif" alt="Проблемы решаемые курсом" class="section-image">
-                <p><b>Какие проблемы ученика решит этот курс:</b></p>
+               <div> <p><b>Какие проблемы ученика решит этот курс:</b></p>
                 <ul>
                     <li>📍 страх чистого листа</li>
                     <li>📍 писать последовательно и структурированно</li>
@@ -95,7 +98,7 @@
                     <li>📍 уметь их применять в своих работах</li>
                     <li>📍 аргументировать свое мнение</li>
                     <li>📍 уметь редактировать свои тексты и многое-многое другое</li>
-                </ul>
+                </ul></div>
             </div>
             <div class="course-block">
                 <p>Поверьте, мой креативщик отрывается здесь от души в наполнении заданий так, чтобы ученики не просто писали сочинения, а чтобы у них зажглась МОТИВАЦИЯ СОЧИНЯТЬ!</p>
